# scoring-api

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  scoring_log.txt
.github/workflows/: main.yaml
scoring/: api.py  scoring.py  store.py
tests/: test.py
tests/integration/: test_api.py  test_scoring.py
tests/unit/: test_fields.py  test_requests.py  test_scoring.py
