[tool.poetry]
name = "scoring"
version = "0.1.0"
description = ""
authors = ["okravchenko <okravchenko@uma.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
types-redis = "^4.6.0.20241004"
pytest = "^8.3.4"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
